[gd_scene load_steps=4 format=3 uid="uid://dpv0bxr88qeol"]

[ext_resource type="Script" uid="uid://c4xqw7lk5h2w5" path="res://Scripts/profile_select.gd" id="1"]
[ext_resource type="Script" uid="uid://bmp5ssaogmhfr" path="res://Scripts/Components/FancyHeader.gd" id="2"]
[ext_resource type="Script" uid="uid://bp75o8pwlbycx" path="res://Scripts/Components/AnimatedButton.gd" id="3"]

[node name="ProfileSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="MainLayout" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Header" type="VBoxContainer" parent="MarginContainer/MainLayout"]
layout_mode = 2
script = ExtResource("2")
header_text = "Select Profile"
enable_gradient = true
gradient_start = Color(0.4, 0.7, 1, 1)
gradient_end = Color(0.8, 0.4, 1, 1)
show_underline = true
animate_on_ready = true
slide_in_direction = "top"

[node name="ProfilesContainer" type="VBoxContainer" parent="MarginContainer/MainLayout"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainLayout/ProfilesContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MainLayout/ProfilesContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ProfileGrid" type="GridContainer" parent="MarginContainer/MainLayout/ProfilesContainer/ScrollContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 3

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/MainLayout/ProfilesContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CreateProfileButton" type="Button" parent="MarginContainer/MainLayout/ProfilesContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Create New Profile"
script = ExtResource("3")

[node name="QuitButton" type="Button" parent="MarginContainer/MainLayout/ProfilesContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "Quit"
script = ExtResource("3")

[node name="CreateProfileDialog" type="Window" parent="."]
title = "Create New Profile"
initial_position = 2
size = Vector2i(500, 350)
visible = false
exclusive = true

[node name="DialogMargin" type="MarginContainer" parent="CreateProfileDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="DialogContent" type="VBoxContainer" parent="CreateProfileDialog/DialogMargin"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderLabel" type="Label" parent="CreateProfileDialog/DialogMargin/DialogContent"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Create Your Profile"
horizontal_alignment = 1

[node name="UsernameContainer" type="VBoxContainer" parent="CreateProfileDialog/DialogMargin/DialogContent"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="UsernameLabel" type="Label" parent="CreateProfileDialog/DialogMargin/DialogContent/UsernameContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Username (3-20 characters, alphanumeric):"

[node name="UsernameInput" type="LineEdit" parent="CreateProfileDialog/DialogMargin/DialogContent/UsernameContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Enter username..."
max_length = 20

[node name="ErrorLabel" type="Label" parent="CreateProfileDialog/DialogMargin/DialogContent/UsernameContainer"]
modulate = Color(1, 0.4, 0.4, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = " "
horizontal_alignment = 1

[node name="DisplayNameContainer" type="VBoxContainer" parent="CreateProfileDialog/DialogMargin/DialogContent"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="DisplayNameLabel" type="Label" parent="CreateProfileDialog/DialogMargin/DialogContent/DisplayNameContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Display Name (optional):"

[node name="DisplayNameInput" type="LineEdit" parent="CreateProfileDialog/DialogMargin/DialogContent/DisplayNameContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "Enter display name (defaults to username)..."
max_length = 30

[node name="Spacer" type="Control" parent="CreateProfileDialog/DialogMargin/DialogContent"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="CreateProfileDialog/DialogMargin/DialogContent"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="CreateButton" type="Button" parent="CreateProfileDialog/DialogMargin/DialogContent/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "Create"

[node name="CancelButton" type="Button" parent="CreateProfileDialog/DialogMargin/DialogContent/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "Cancel"

[node name="DeleteConfirmDialog" type="ConfirmationDialog" parent="."]
title = "Delete Profile"
initial_position = 2
size = Vector2i(400, 150)
ok_button_text = "Delete"
dialog_text = "Are you sure you want to delete this profile? This action cannot be undone."
